--- a/_posts/2018-10-21-Alex.md
+++ b/_posts/2018-10-21-Alex.md
@@ -15,5 +15,6 @@ tags:
 Today , i recommend a new download too,it's alex.you can install it on your Linux or Windows .
 
 let's do the test.
+## ALEX VS WGET Speed   
 <img src='img/alex.gif'>
 yes.we can see ,the  alex donwload's speed is quickly for narmal downlaod kit (wget).
