--- a/_posts/2018-10-21-Alex.md
+++ b/_posts/2018-10-21-Alex.md
@@ -16,6 +16,6 @@ Today , i recommend a new download too,it's alex.you can install it on your Linu
 let's do the test.
 <br>
 ## ALEX VS WGET Speed   
-<img src='img/alex.gif'>
+<img src='img/deepin-alex.gif'>
 <br>
 yes.we can see ,the  alex donwload's speed is quickly for narmal downlaod kit (wget).
