--- a/_posts/2018-10-19-About.md
+++ b/_posts/2018-10-19-About.md
@@ -11,9 +11,7 @@ tags:
 ---
 
 ## Users
-
- <iframe src="/aboutf/about.html" width="340dp" height="600dp">There all peoples for our team.</iframe>
-
+Our Team Members link <a herf='laboratory-blog.github.io/aboutf/about.html'>
 ## Members description
 <br/>
 Team leader : 张宁<br/>
