--- a/_posts/2018-10-19-About.md
+++ b/_posts/2018-10-19-About.md
@@ -11,7 +11,7 @@ tags:
 ---
 
 ## Users
-Our Team Members link <a href='laboratory-blog.github.io/aboutf/about.html'>http://laboratory-blog.github.io/aboutf/about.html</a>
+Our Team Members link <a href='laboratory-blog.github.io/aboutf/about.html'>GUI</a>
 ## Members description
 <br/>
 Team leader : 张宁<br/>
