--- a/_posts/2018-12-01.md
+++ b/_posts/2018-12-01.md
@@ -1,1 +1,11 @@
-2
+---
+layout:     post
+title:     test
+subtitle:  Computer Science
+date:       2018-11-18
+author:     张宁
+header-img: img/post-bg-cook.jpg
+catalog: true
+tags:
+    - Computer-Science
+---
